--- a/chart/bind9/templates/service.yaml
+++ b/chart/bind9/templates/service.yaml
@@ -7,11 +7,11 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.service.udpport }}
       targetPort: 53
       protocol: TCP
       name: dns-tcp
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.service.tcpport }}
       targetPort: 53
       protocol: UDP
       name: dns-udp
